retrieveUnpackaged/objects/Monitoring_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASP_Approval_Date__c</fullName>
        <label>ASP Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASP_Waiver_Expired__c</fullName>
        <label>ASP Waiver Expired</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accessibility_Comments__c</fullName>
        <label>Accessibility Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessibility_Compliance__c</fullName>
        <label>Accessibility Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accessibility_Self_Evaluation_Comments__c</fullName>
        <label>Accessibility Self-Evaluation Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessibility_Self_Evaluation_Complian__c</fullName>
        <label>Accessibility Self-Evaluation Complian</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accommodation_to_qualified_individuals__c</fullName>
        <label>Accommodation to qualified individuals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounting_Reconciles_with_FFR__c</fullName>
        <label>Accounting Reconciles with FFR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_during_assessment_period__c</fullName>
        <label>Active during assessment period</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adequate_liability_coverage__c</fullName>
        <label>Adequate liability coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Assessment_Results__c</fullName>
        <label>Annual Assessment Results</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_other_Key_Financial_Personnel__c</fullName>
        <label>Any other Key Financial Personnel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicants_bearing_cost_of_check__c</fullName>
        <label>Applicants bearing cost of check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft, Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_of_Inquiry_Interest__c</fullName>
        <label>Areas of Inquiry/Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessment_Approach_for_Outcomes__c</fullName>
        <label>Assessment Approach for Outcomes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Review_Accurate__c</fullName>
        <label>Assessment Review Accurate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Project_Director_Supervisor_C__c</fullName>
        <label>Assigned Project Director Supervisor C</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Project_Director_Supervisor__c</fullName>
        <label>Assigned Project Director Supervisor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Reports__c</fullName>
        <label>Audit Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_BoardDirectors_Supports_Success__c</fullName>
        <label>Board of Directors Supports Success</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <label>Bookkeeper</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Actual_Report_Review__c</fullName>
        <label>Budgeted/Actual Report Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budgeting_Function__c</fullName>
        <label>Budgeting Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEO_ED_Exercising_Management_Comments__c</fullName>
        <label>CEO ED Exercising Management Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEO_ED_Exercising_Management__c</fullName>
        <label>CEO/ED Exercising Management</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CNCS_Person_Conducting_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Person Conducting Visit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_to_manage_SIF_program__c</fullName>
        <label>Capacity to manage SIF program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_and_Report_on_PM_results__c</fullName>
        <label>Capture and Report on PM results</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Receipts_Function__c</fullName>
        <label>Cash Receipts Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chair_Community_Participation_Group__c</fullName>
        <label>Chair, Community Participation Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_of_Accounts__c</fullName>
        <label>Chart of Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Participation_Group_Member__c</fullName>
        <label>Community Participation Group Member</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completing_the_FFR_Function__c</fullName>
        <label>Completing the FFR Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Monitoring_Site_Visit_Date__c</fullName>
        <label>Compliance Monitoring Site Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consult_with_GO__c</fullName>
        <label>Consult with GO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Contractor_Cost_in_GL__c</fullName>
        <label>Consultant/Contractor Cost in GL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Program_Lead_to_schedule_visit__c</fullName>
        <label>Contact Program Lead to schedule visit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <label>Controller</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrections_to_check_necessary__c</fullName>
        <label>Corrections to check necessary</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Invoices__c</fullName>
        <label>Cost Share Invoices</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Costs_Charged_to_Grant_Acceptable__c</fullName>
        <label>Costs Charged to Grant Acceptable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Check_Compliance__c</fullName>
        <label>Criminal History Check Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Check_Documentation_A__c</fullName>
        <label>Criminal History Check Documentation A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Check_for_Hiring__c</fullName>
        <label>Criminal History Check for Hiring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Comments__c</fullName>
        <label>Criminal History Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Valid_Data_for_Outpu__c</fullName>
        <label>Data Collection - Valid Data for Outpu</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Collector_Identified__c</fullName>
        <label>Data Collector Identified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_used_to_measure_outcomes__c</fullName>
        <label>Data used to measure outcomes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_s_of_Visit__c</fullName>
        <label>Date(s) of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Non_Federal_Cash_Acct_System__c</fullName>
        <label>Describe Non-Federal Cash Acct. System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discrimination_complaints_filed__c</fullName>
        <label>Discrimination complaints filed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discrimination_or_Non_Compliance_Found__c</fullName>
        <label>Discrimination or Non-Compliance Found</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentation_of_assessment__c</fullName>
        <label>Documentation of assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donor_Signature_received__c</fullName>
        <label>Donor Signature received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drawdown_of_Federal_Funds_Function__c</fullName>
        <label>Drawdown of Federal Funds Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Free_Workplace_Policies__c</fullName>
        <label>Drug-Free Workplace Policies</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Signed_Travel_Vouchers__c</fullName>
        <label>Employee Signed Travel Vouchers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Denied_for_Negative_Check_R__c</fullName>
        <label>Employment Denied for Negative Check R</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_of_Service_Benefit_Elections__c</fullName>
        <label>End of Service Benefit Elections</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Inventory_System__c</fullName>
        <label>Equipment Inventory System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Established_Policies_for_Volunteers_fo__c</fullName>
        <label>Established Policies for Volunteers fo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evidence_of_VISTA_Member_Discriminatio__c</fullName>
        <label>Evidence of VISTA Member Discriminatio</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evidence_of_completion__c</fullName>
        <label>Evidence of completion</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Director_CEO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Director/CEO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Monitoring Plans (Executive Director/CEO)</relationshipLabel>
        <relationshipName>Monitoring_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exemplary_Staff_Sponsor_Practices__c</fullName>
        <label>Exemplary Staff/Sponsor Practices</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBI_State_Criminal_Check_Initiated__c</fullName>
        <label>FBI/State Criminal Check Initiated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FBI_finger_print_based_search_conducte__c</fullName>
        <label>FBI finger-print based search conducte</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FFR_Ledger_Totals_Comments__c</fullName>
        <label>FFR Ledger Totals Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFR_Ledger_Totals_Support_Expenditures__c</fullName>
        <label>FFR Ledger Totals Support Expenditures</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fed_Non_Fed_Tracked_Separately__c</fullName>
        <label>Fed. &amp; Non-Fed Tracked Separately</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fed_Non_Fed_Tracking_Comments__c</fullName>
        <label>Fed. &amp; Non-Fed Tracking Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Completed_Letter_generated__c</fullName>
        <label>Final/Completed Letter generated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Records_Retained__c</fullName>
        <label>Financial Records Retained</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Function__c</fullName>
        <label>Financial Reporting Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Letter_Corrective_Actions_Re__c</fullName>
        <label>Follow-Up Letter Corrective Actions Re</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_Actions_Required_Letter_Gene__c</fullName>
        <label>Follow up/Actions Required Letter Gene</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_actions_prepared__c</fullName>
        <label>Follow up actions prepared</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequent_Turnover_of_Key_Staff__c</fullName>
        <label>Frequent Turnover of Key Staff</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Volunteer_Skills__c</fullName>
        <label>Future Volunteer Skills</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Number</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Monitoring Plans</relationshipLabel>
        <relationshipName>Monitoring_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <formula>Risk_Profile__r.Award__r.Grant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_funded_employees_before_11_23_20__c</fullName>
        <label>Grant-funded employees before 11/23/20</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grantee_Follow_Up_Actions_Completed_Da__c</fullName>
        <label>Grantee Follow-Up Actions Completed Da</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grantee_Follow_Up_Actions_recorded__c</fullName>
        <label>Grantee Follow-Up Actions recorded</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grantee_Project_Application__c</fullName>
        <label>Grantee/Project Application</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grievance_Procedures_Compliance__c</fullName>
        <label>Grievance Procedures Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_Check_Safeguards_Provided__c</fullName>
        <label>History Check Safeguards Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Source_of_Check_Verified__c</fullName>
        <label>How/Source of Check Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_not_met_Explain__c</fullName>
        <label>If not met, Explain:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contribution_Description__c</fullName>
        <label>In-Kind Contribution Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donations_Comments__c</fullName>
        <label>In-Kind Donations Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donations_Recorded__c</fullName>
        <label>In-Kind Donations Recorded</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donor_Name__c</fullName>
        <label>In-Kind Donor Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Fund_Verification_Statement__c</fullName>
        <label>In-Kind Fund Verification Statement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Kind_Gift_Amount__c</fullName>
        <label>In-Kind Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Kind_Gift_Date__c</fullName>
        <label>In-Kind Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Subject_to_Check_Informed__c</fullName>
        <label>Individual Subject to Check - Informed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Verified_with_Govt_ID__c</fullName>
        <label>Individual Verified with Govt. ID</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individuals_convicted_of_murder__c</fullName>
        <label>Individuals convicted of murder</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>